2007-03-29  Roland Levillain  <roland@lrde.epita.fr>

	* makeinfo/makeinfo.c (cm_image): Look for a JPEG image in the
	include search path before giving up.
	Fix inclusion of JPEG images (with non explicit extension)
	not present in the current directory, but in the include search path.

2007-03-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Menus): missing word "text".
	From Matt Kraai, 27 Mar 2007 10:26:28 -0700.

2007-03-18  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (cm_image): malloc enough space for the .txt
	when given an extension.

2007-03-17  Karl Berry  <karl@gnu.org>

	* util/dir-example: dmalloc, alignment.

2007-03-13  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex (\enddoublecolumns): add \penalty0 so the 
	recent contributions won't be spuriously added to an index page.

2007-02-26  Karl Berry  <karl@gnu.org>

	* info/info.c (info_short_example): example for dumping a whole
	manual, suggested by Dan Jacobson, 21 Feb 2007 08:37:08.

2007-02-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (The Top Node): no @insertcopying recommended,
	per rms.

2007-02-21  Karl Berry  <karl@gnu.org>

	* system.h: simplify system header inclusion, following current
	practice; that is, copied from GNU Hello.

	* makeinfo/test/no-headers (nulldev): just always use /dev/null.
	Also from Brian.

	* system.h (strcase.h) [!HAVE_STRCASECMP...]: remove this
	inclusion entirely, apparently with gnulib string.h suffices.
	Report from Brian Dessent, 31 Oct 2006 15:50:34.

2007-02-21  Brian Dessent  <brian@dessent.net>

	* info/info.c,
	* info/infokey.c,
	* info/makedoc.c,
	* util/texindex.c (program_name): declare as non-static, for
	non-glibc, e.g., Cygwin.  bug-texinfo mail from 31 Oct 2006 15:50:34.

2007-02-14  Miloslav Trmac  <mitr@redhat.com>

	* makeinfo/makeinfo.c (getdocumenttext): Correctly save and
	restore the current locale configuration.
	bug-texinfo mail of 14 Feb 2007 16:28:37 +0100.

2007-02-11  Karl Berry  <karl@gnu.org>
